// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Component should render correctly should render correctly with [object Object] 1`] = `
<View
  style={
    {
      "flexDirection": "row",
    }
  }
>
  <View
    collapsable={false}
    style={
      {
        "alignSelf": undefined,
        "bottom": undefined,
        "end": undefined,
        "flex": undefined,
        "left": undefined,
        "position": undefined,
        "right": undefined,
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
        "start": undefined,
        "top": undefined,
      }
    }
    testID="ButtonTestID-container-outer-layer"
  >
    <View
      collapsable={false}
      style={
        {
          "flex": undefined,
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
          "shadowRadius": 0,
        }
      }
      testID="ButtonTestID-container-inner-layer"
    >
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "#8DBE8B",
            "borderColor": "#ffffff00",
            "borderRadius": 10,
            "borderStyle": "solid",
            "borderWidth": 1,
            "elevation": 0,
            "flex": undefined,
            "height": 48,
            "justifyContent": "center",
            "minWidth": "auto",
            "shadowColor": "#000",
            "shadowOffset": {
              "height": 0,
              "width": 0,
            },
            "shadowOpacity": 0,
            "shadowRadius": 0,
            "width": "100%",
          }
        }
        testID="ButtonTestID-container"
      >
        <View
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "overflow": "hidden",
              },
              false,
              {
                "borderRadius": 10,
              },
            ]
          }
          testID="ButtonTestID"
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                },
                undefined,
              ]
            }
          >
            <Text
              numberOfLines={1}
              selectable={false}
              style={
                [
                  {
                    "fontFamily": "System",
                    "fontSize": 14,
                    "fontWeight": "500",
                    "letterSpacing": 0.1,
                    "lineHeight": 20,
                  },
                  {
                    "textAlign": "left",
                  },
                  {
                    "color": "rgba(28, 27, 31, 1)",
                    "writingDirection": "ltr",
                  },
                  [
                    {
                      "marginHorizontal": 16,
                      "marginVertical": 9,
                      "textAlign": "center",
                    },
                    false,
                    {
                      "marginHorizontal": 12,
                    },
                    {
                      "marginHorizontal": 8,
                    },
                    false,
                    {
                      "color": "rgba(103, 80, 164, 1)",
                      "fontFamily": "System",
                      "fontSize": 14,
                      "fontWeight": "500",
                      "letterSpacing": 0.1,
                      "lineHeight": 20,
                    },
                    undefined,
                  ],
                ]
              }
              testID="ButtonTestID-text"
            >
              <Text
                style={
                  [
                    {
                      "color": "#2125293d",
                      "lineHeight": 24,
                    },
                    {
                      "fontFamily": "SourceSansPro-SemiBold",
                      "fontSize": 16,
                      "fontWeight": "600",
                      "textAlign": "auto",
                    },
                  ]
                }
              >
                dummy text
              </Text>
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Button Component should render correctly should render correctly with [object Object] 2`] = `
<View
  style={
    {
      "flexDirection": "row",
    }
  }
>
  <View
    collapsable={false}
    style={
      {
        "alignSelf": undefined,
        "bottom": undefined,
        "end": undefined,
        "flex": undefined,
        "left": undefined,
        "position": undefined,
        "right": undefined,
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
        "start": undefined,
        "top": undefined,
      }
    }
    testID="ButtonTestID-container-outer-layer"
  >
    <View
      collapsable={false}
      style={
        {
          "flex": undefined,
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
          "shadowRadius": 0,
        }
      }
      testID="ButtonTestID-container-inner-layer"
    >
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#F8F9FA",
            "borderRadius": 10,
            "borderStyle": "solid",
            "borderWidth": 1,
            "elevation": 0,
            "flex": undefined,
            "height": 48,
            "justifyContent": "center",
            "minWidth": "auto",
            "shadowColor": "#000",
            "shadowOffset": {
              "height": 0,
              "width": 0,
            },
            "shadowOpacity": 0,
            "shadowRadius": 0,
            "width": "100%",
          }
        }
        testID="ButtonTestID-container"
      >
        <View
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "overflow": "hidden",
              },
              false,
              {
                "borderRadius": 10,
              },
            ]
          }
          testID="ButtonTestID"
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                },
                undefined,
              ]
            }
          >
            <Text
              numberOfLines={1}
              selectable={false}
              style={
                [
                  {
                    "fontFamily": "System",
                    "fontSize": 14,
                    "fontWeight": "500",
                    "letterSpacing": 0.1,
                    "lineHeight": 20,
                  },
                  {
                    "textAlign": "left",
                  },
                  {
                    "color": "rgba(28, 27, 31, 1)",
                    "writingDirection": "ltr",
                  },
                  [
                    {
                      "marginHorizontal": 16,
                      "marginVertical": 9,
                      "textAlign": "center",
                    },
                    false,
                    {
                      "marginHorizontal": 12,
                    },
                    {
                      "marginHorizontal": 8,
                    },
                    false,
                    {
                      "color": "rgba(103, 80, 164, 1)",
                      "fontFamily": "System",
                      "fontSize": 14,
                      "fontWeight": "500",
                      "letterSpacing": 0.1,
                      "lineHeight": 20,
                    },
                    undefined,
                  ],
                ]
              }
              testID="ButtonTestID-text"
            >
              <Text
                style={
                  [
                    {
                      "color": "#DEE2E6",
                      "lineHeight": 24,
                    },
                    {
                      "fontFamily": "SourceSansPro-SemiBold",
                      "fontSize": 16,
                      "fontWeight": "600",
                      "textAlign": "auto",
                    },
                  ]
                }
              >
                dummy text
              </Text>
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Button Component should render correctly should render correctly with [object Object] 3`] = `
<View
  style={
    {
      "flexDirection": "row",
    }
  }
>
  <View
    collapsable={false}
    style={
      {
        "alignSelf": undefined,
        "bottom": undefined,
        "end": undefined,
        "flex": undefined,
        "left": undefined,
        "position": undefined,
        "right": undefined,
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
        "start": undefined,
        "top": undefined,
      }
    }
    testID="ButtonTestID-container-outer-layer"
  >
    <View
      collapsable={false}
      style={
        {
          "flex": undefined,
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
          "shadowRadius": 0,
        }
      }
      testID="ButtonTestID-container-inner-layer"
    >
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "#C4FE7A",
            "borderColor": "#ffffff00",
            "borderRadius": 10,
            "borderStyle": "solid",
            "borderWidth": 1,
            "elevation": 0,
            "flex": undefined,
            "height": 48,
            "justifyContent": "center",
            "minWidth": "auto",
            "shadowColor": "#000",
            "shadowOffset": {
              "height": 0,
              "width": 0,
            },
            "shadowOpacity": 0,
            "shadowRadius": 0,
            "width": "100%",
          }
        }
        testID="ButtonTestID-container"
      >
        <View
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "overflow": "hidden",
              },
              false,
              {
                "borderRadius": 10,
              },
            ]
          }
          testID="ButtonTestID"
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                },
                undefined,
              ]
            }
          >
            <Text
              numberOfLines={1}
              selectable={false}
              style={
                [
                  {
                    "fontFamily": "System",
                    "fontSize": 14,
                    "fontWeight": "500",
                    "letterSpacing": 0.1,
                    "lineHeight": 20,
                  },
                  {
                    "textAlign": "left",
                  },
                  {
                    "color": "rgba(28, 27, 31, 1)",
                    "writingDirection": "ltr",
                  },
                  [
                    {
                      "marginHorizontal": 16,
                      "marginVertical": 9,
                      "textAlign": "center",
                    },
                    false,
                    {
                      "marginHorizontal": 12,
                    },
                    {
                      "marginHorizontal": 8,
                    },
                    false,
                    {
                      "color": "rgba(103, 80, 164, 1)",
                      "fontFamily": "System",
                      "fontSize": 14,
                      "fontWeight": "500",
                      "letterSpacing": 0.1,
                      "lineHeight": 20,
                    },
                    undefined,
                  ],
                ]
              }
              testID="ButtonTestID-text"
            >
              <Text
                style={
                  [
                    {
                      "color": "#F8F9FA",
                      "lineHeight": 24,
                    },
                    {
                      "fontFamily": "SourceSansPro-SemiBold",
                      "fontSize": 16,
                      "fontWeight": "600",
                      "textAlign": "auto",
                    },
                  ]
                }
              >
                dummy text
              </Text>
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
